<resources>
    <string name="app_name">Jeep Forecast</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="content_desc_jeep_config">Image view for the jeep config on this day</string>
    <string name="degrees_farenheight">℉</string>
    <string name="weather_configurations">Weather Configurations</string>
    <string name="search_title">Location</string>
    <string name="search_hint">Search city or zip code</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_desc_weather_config_image">Preview of image for this weather configuration</string>
    <string name="low_temp_threshold">Low Temp Threshold</string>
    <string name="high_temp_threshold">High Temp Threshold</string>
    <string name="low_precip_threshold">Low Precip Threshold</string>
    <string name="high_precip_threshold">High Precip Threshold</string>
    <string name="high_temp">High Temp</string>
    <string name="low_temp">Low Temp</string>
    <string name="high_precip">High Precip</string>
    <string name="low_precip">Low Precip</string>
    <string name="precipitation_icon_for_config_list_item">Precipitation icon for config list item</string>
    <string name="temp_icon_for_config_list_item">Temp icon for config list item</string>
    <string name="image_to_use_for_config_list_item">Image to use for config list item</string>
</resources>
