<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cgavlabs.jeepforecast.main.MainActivity">
  <item
      android:id="@+id/search"
      android:hint="Search locations"
      android:icon="@android:drawable/ic_menu_search"
      android:iconifiedByDefault="true"
      android:title="@string/search_title"
      app:actionViewClass="android.support.v7.widget.SearchView"
      app:showAsAction="always"/>
  <item
      android:id="@+id/action_weather_config"
      android:orderInCategory="99"
      android:title="@string/weather_configurations"
      app:showAsAction="never"/>
  <item
      android:id="@+id/action_settings"
      android:orderInCategory="100"
      android:title="@string/action_settings"
      app:showAsAction="never"/>
</menu>
